--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "16.0.8",
     "pdfjs-dist": "^5.4.449",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
