--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.87.1",
     "date-fns": "^4.1.0",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.562.0",
     "next": "16.0.8",
     "openai": "^6.14.0",
